change from openfeign to rest client