@@ -1,7 +1,10 @@
 package com.javatodev.finance.model.mapper;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+
 import java.util.*;
-import java.util.stream.Collectors;
 
 public abstract class BaseMapper<E, D> {
     public abstract E convertToEntity(D dto, Object... args);
@@ -9,11 +12,11 @@ public abstract class BaseMapper<E, D> {
     public abstract D convertToDto(E entity, Object... args);
 
     public Collection<E> convertToEntity(Collection<D> dto, Object... args) {
-        return dto.stream().map(d -> convertToEntity(d, args)).collect(Collectors.toList());
+        return dto.stream().map(d -> convertToEntity(d, args)).toList();
     }
 
     public Collection<D> convertToDto(Collection<E> entity, Object... args) {
-        return entity.stream().map(e -> convertToDto(e, args)).collect(Collectors.toList());
+        return entity.stream().map(e -> convertToDto(e, args)).toList();
     }
 
     public List<E> convertToEntityList(Collection<D> dto, Object... args) {
@@ -22,6 +25,10 @@ public abstract class BaseMapper<E, D> {
 
     public List<D> convertToDtoList(Collection<E> entity, Object... args) {
         return new ArrayList<>(convertToDto(entity, args));
+    }
+
+    public Page<D> convertToDtoPage(Page<E> entity, Pageable pageable, Object... args) {
+        return new PageImpl<>(convertToDtoList(entity.getContent(), args), pageable, entity.getTotalElements());
     }
 
     public Set<E> convertToEntitySet(Collection<D> dto, Object... args) {
